<?xml version="1.0"?>
<!--suppress ALL -->
<package>
  <name>tango_sensors</name>
  <version>1.0.0</version>
  <description>TANGO Sensors support package</description>

  <maintainer email="YuryVeksler@yandex.ru">Yury D.</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>android_core</build_depend>
  <build_depend>rosjava_build_tools</build_depend>
  <build_depend>rosjava_core</build_depend>
  <build_depend>std_msgs</build_depend>

  <export>

  </export>
</package>
